--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17180102">The 2018 Perl Developer Survey Results</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.perl.com/article/the-2018-perl-developer-survey-results/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kamaal">kamaal</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 15:37:26 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    12.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176920">Clean code practices with JavaScript</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -366,6 +346,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    8.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176067">How to make a floating city in space?</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183361">Introducing Machine Learning Practica</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theguardian.com/cities/2014/may/16/how-build-city-in-space-nasa-elon-musk-spacex#comment-35743630">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=sky_projektor">sky_projektor</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 02:37:12 &nbsp;•&nbsp;
+                                    <a class="node" href="https://blog.google/topics/machine-learning/introducing-machine-learning-practica/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 22:29:38 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    8.0 points
+                                    7.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
+                                    <a href="https://news.ycombinator.com/item?id=17182357">Some Were Meant for C [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.cl.cam.ac.uk/%7Esrk31/research/papers/kell17some-preprint.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=angersock">angersock</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 19:46:03 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     7.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 02:30:04.546789</strong>
+            <strong>Last update at 2018-05-30 02:40:04.799134</strong>
         </div>
     </div>
 </div>
