--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
                                     3 comments &nbsp;•&nbsp;
-                                    26.0 points
+                                    27.0 points
                                 </span>
                             </td>
                         </tr>
@@ -214,7 +214,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:45:12 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    26.0 points
+                                    27.0 points
                                 </span>
                             </td>
                         </tr>
@@ -333,8 +333,8 @@
                                     <a class="node" href="https://www.flyingmag.com/honda-aircraft-launches-hondajet-elite">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=nwatson">nwatson</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 03:00:47 &nbsp;•&nbsp;
-                                    10 comments &nbsp;•&nbsp;
-                                    21.0 points
+                                    13 comments &nbsp;•&nbsp;
+                                    24.0 points
                                 </span>
                             </td>
                         </tr>
@@ -374,6 +374,26 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=samaysharma">samaysharma</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:27:10 &nbsp;•&nbsp;
                                     3 comments &nbsp;•&nbsp;
+                                    20.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:31:12 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     20.0 points
                                 </span>
                             </td>
@@ -506,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183644">20-week Study: Facial exercises help middle-aged appear more youthful</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:31:12 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.northwestern.edu/stories/2018/january/facial-exercises-help-middle-aged-women-appear-more-youthful/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=DrScump">DrScump</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 23:28:21 &nbsp;•&nbsp;
+                                    2 comments &nbsp;•&nbsp;
                                     17.0 points
                                 </span>
                             </td>
@@ -534,26 +554,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=sudo______">sudo______</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:56:31 &nbsp;•&nbsp;
                                     3 comments &nbsp;•&nbsp;
-                                    16.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17179333">Tesla's Board Sounds the Retweet</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/view/articles/2018-05-29/elon-musk-tweets-tesla-s-board-sleeps">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kgwgk">kgwgk</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 14:15:46 &nbsp;•&nbsp;
-                                    None comments &nbsp;•&nbsp;
                                     16.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 04:50:04.800656</strong>
+            <strong>Last update at 2018-05-30 05:00:03.936350</strong>
         </div>
     </div>
 </div>
