--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 17:24:27 &nbsp;•&nbsp;
+                                    97 comments &nbsp;•&nbsp;
+                                    109.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169810">Empiricism and the limits of gradient descent</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -226,26 +246,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://github.com/sodium-friends/learntocrypto">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 23:59:50 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
-                                    103.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17166055">Experimental music notation resources (2015)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -266,14 +266,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174968">Pushing the Limits of IPFS and OrbitDB</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183101">The vgo proposal is accepted. Now what?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://mrh.io/2018-01-24-pushing-limits-ipfs-orbitdb/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 21:31:24 &nbsp;•&nbsp;
-                                    33 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://research.swtch.com/vgo-accepted">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 21:37:21 &nbsp;•&nbsp;
+                                    66 comments &nbsp;•&nbsp;
                                     98.0 points
                                 </span>
                             </td>
@@ -286,15 +286,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183101">The vgo proposal is accepted. Now what?</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174968">Pushing the Limits of IPFS and OrbitDB</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://research.swtch.com/vgo-accepted">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 21:37:21 &nbsp;•&nbsp;
-                                    64 comments &nbsp;•&nbsp;
-                                    97.0 points
+                                    <a class="node" href="http://mrh.io/2018-01-24-pushing-limits-ipfs-orbitdb/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 21:31:24 &nbsp;•&nbsp;
+                                    33 comments &nbsp;•&nbsp;
+                                    98.0 points
                                 </span>
                             </td>
                         </tr>
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=cpitman">cpitman</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:36:30 &nbsp;•&nbsp;
                                     27 comments &nbsp;•&nbsp;
-                                    91.0 points
+                                    92.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 04:50:04.800656</strong>
+            <strong>Last update at 2018-05-30 05:00:03.936350</strong>
         </div>
     </div>
 </div>
