--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174697">Two Canadian banks say accounts compromised: CIBC 40,000 and BMO 50,000</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 20:38:07 &nbsp;•&nbsp;
-                                    117 comments &nbsp;•&nbsp;
-                                    138.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17177241">Microsoft .Net Core telemetry is not opt-in</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -214,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=wearhere">wearhere</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 18:11:56 &nbsp;•&nbsp;
                                     38 comments &nbsp;•&nbsp;
-                                    134.0 points
+                                    135.0 points
                                 </span>
                             </td>
                         </tr>
@@ -333,8 +313,8 @@
                                     <a class="node" href="https://priceonomics.com/post/45768546804/diamonds-are-bullshit">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=joering2">joering2</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 02:22:17 &nbsp;•&nbsp;
-                                    25 comments &nbsp;•&nbsp;
-                                    126.0 points
+                                    27 comments &nbsp;•&nbsp;
+                                    127.0 points
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 19:29:39 &nbsp;•&nbsp;
                                     100 comments &nbsp;•&nbsp;
-                                    121.0 points
+                                    122.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,6 +466,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://github.com/sodium-friends/learntocrypto">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 23:59:50 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
+                                    114.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172613">Shadow DOM enabled in Firefox nightly</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
+                                    <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/sodium-friends/learntocrypto">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 23:59:50 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
-                                    110.0 points
+                                    <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 17:24:27 &nbsp;•&nbsp;
+                                    98 comments &nbsp;•&nbsp;
+                                    109.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 05:10:04.761105</strong>
+            <strong>Last update at 2018-05-30 05:20:04.702400</strong>
         </div>
     </div>
 </div>
