--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183555">The History of the Processing Programming Language</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://medium.com/@ProcessingOrg/a-modern-prometheus-59aed94abe85">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kwindla">kwindla</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 23:09:37 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    30.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17183136">Microsoft is now more valuable than Alphabet by market cap</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -233,8 +213,8 @@
                                     <a class="node" href="https://www.flyingmag.com/honda-aircraft-launches-hondajet-elite">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=nwatson">nwatson</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 03:00:47 &nbsp;•&nbsp;
-                                    15 comments &nbsp;•&nbsp;
-                                    26.0 points
+                                    16 comments &nbsp;•&nbsp;
+                                    27.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +334,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 09:31:12 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
-                                    23.0 points
+                                    25.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,6 +526,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17183361">Introducing Machine Learning Practica</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://blog.google/topics/machine-learning/introducing-machine-learning-practica/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 22:29:38 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    16.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17179671">B2B SaaS Growth – Reverse Engineered</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 05:20:04.702400</strong>
+            <strong>Last update at 2018-05-30 05:30:02.998872</strong>
         </div>
     </div>
 </div>
